Update JVM options